--- a/Assignment 3/Base.lproj/Main.storyboard
+++ b/Assignment 3/Base.lproj/Main.storyboard
@@ -64,6 +64,13 @@
                                     <action selector="op2Button:" destination="ZIl-ni-bND" eventType="touchUpInside" id="Nrh-Xa-HBC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kY8-3D-tnG">
+                                <rect key="frame" x="105" y="477" width="218" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="op3Button:" destination="ZIl-ni-bND" eventType="touchUpInside" id="EAr-aF-C1h"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="dWP-g4-fhh"/>
@@ -73,6 +80,7 @@
                         <outlet property="gameTextLabel" destination="ddj-RQ-NKR" id="3v2-oz-zVC"/>
                         <outlet property="op1Text" destination="hFY-9K-9oV" id="HfN-aC-ZvX"/>
                         <outlet property="op2Text" destination="E5Y-tf-kVh" id="sny-BO-0rq"/>
+                        <outlet property="op3Text" destination="kY8-3D-tnG" id="RY7-W3-j85"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hfj-lF-hKF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
